// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render DepensesSummary with 1 depense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    depense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render DepensesSummary with multiple depenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    depenses
     totalling 
    $235,123,409.87
  </h1>
</div>
`;
